--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,7 @@
 body {
   overflow-y: scroll;
   font-family: "Open Sans", sans-serif;
-  margin: 0;
-  background-color: #fcf3f6;
+  background-color: #f7f7f7;
 }
 
 h1 {
